# sqlite

./: SQLite_Insert&Query.ipynb  SQLite_Update&Delete.ipynb  build.py  populations.db  pyproject.toml
db/: std.db
docker/: docker-compose.yml
people/: main.py  population.taiwan.csv
stake/: FMNPTK.csv  STOCK_DAY_1101_202303.csv  main.py
